v1.2/04.CAS_Calculation_Engine_n_Cost_Rule_Spec.md
# 04. CAS_Calculation_Engine_n_Cost_Rule_Spec

## 1. Document Purpose

CAS 계산 엔진이 처리하는 모든 비용 산식, 규칙, 계산 순서, 예외 처리를 정의한다.

계산 결과는 여기 정의된 규칙으로만 산출된다. 다른 방식의 계산은 허용하지 않는다.

---

## 2. Fundamental Calculation Philosophy

### 2.1 Deterministic Calculation Only

* 동일한 Snapshot 입력은 항상 **동일한 계산 결과**를 산출해야 한다.
* 확률, 예측, 추정, 평균 보정 로직은 허용되지 않는다.

### 2.2 Input-driven, Rule-based

* 모든 계산은 **Stage Snapshot에 포함된 INPUT CostItem** 기준으로 돌아간다.
* 사용자는 계산 결과(AGGREGATED, DERIVED)를 직접 입력하거나 수정할 수 없다.

### 2.3 Ontology-Formalized Rules

* CAS의 모든 계산 규칙은 SWRL(Semantic Web Rule Language) 규칙으로 형식화된다 (10. CAS_Ontology_Specification §7 참조).
* SWRL 형식화는 다음을 제공한다:
  * 추론 엔진에 의해 검증 가능한 기계 판독 규칙 정의
  * 계산 체인의 완전성 및 비순환성에 대한 형식 증명
  * 각 CostItem의 의미 유형에 대한 OWL 클래스 소속 명시 (INPUT=`cas:InputFact`, AGGREGATED=`cas:DerivedFact`, DERIVED=`cas:EvaluatedFact`)
* 결정론적 계산 엔진과 SWRL 추론 엔진은 동일 입력에 대해 **반드시 동일한 결과를 산출**해야 한다. 불일치는 BLOCKER 결함이다 (10 §10 참조).

---

## 3. CostItem Classification & Calculation Order

### 3.1 CostItem Semantic Types

| Semantic Type | Description             | Editable | Ontology Class       | Inference Role       |
| ------------- | ----------------------- | -------- | -------------------- | -------------------- |
| INPUT         | 사용자가 Stage별로 입력하는 원천 비용 | Yes      | `cas:InputFact`      | Asserted Triple      |
| AGGREGATED    | INPUT을 집계하여 산출되는 값      | No       | `cas:DerivedFact`    | SWRL 집계 규칙 추론 결과    |
| DERIVED       | 규칙 기반으로 계산되는 지표         | No       | `cas:EvaluatedFact`  | SWRL 파생 규칙 추론 결과    |

---

### 3.2 Calculation Order (Strict)

1. INPUT CostItem Validation
2. AGGREGATED CostItem Calculation
3. DERIVED Metric Calculation
4. Result Validation

※ 상위 단계 계산 실패 시 하위 단계는 수행되지 않는다.
※ 이 순서는 SWRL 규칙 실행 의존성 체인에 대응한다: Asserted Triple(INPUT)이 존재해야 SWRL 집계 규칙(AGGREGATED)이 발화하고, 집계 결과가 존재해야 파생 규칙(DERIVED)이 발화한다.

---

## 4. Cost Calculation Rules

본 장은 엑셀 레퍼런스(수주가 분석 파일)에서 사용되는 계산 체계를 **CAS v1의 표준 규칙**으로 정리한다.

---

### 4.1 Time Horizon & Views

CAS는 동일한 Snapshot에 대해 두 가지 View를 지원한다.

1. **초기년(Initial Year) View**

* 기준 연도 1개(초기년)만을 대상으로 per-unit 및 금액을 산출

2. **5년 평균(5Y Avg) View**

* 지정된 5개 연도(Year1~Year5)의 per-unit 값을 **단순 평균(AVERAGE)** 하여 산출
* 평균 대상 연도는 Vehicle별로 설정 가능하되, 기본은 최초 5개 연도이다.

---

### 4.2 Input & Derived CostItem Set (Reporting)

Analysis(02-5.5)에서 비교하는 표준 비용 항목(표준 출력 컬럼)은 아래 집합을 기본으로 한다.

**INPUT (per-unit):**

* 판매가
* 재료비
* 조립비
* 물류비
* 포장비

**AGGREGATED:**

* 총매출
* 총비용

**DERIVED:**

* 총비용율

추가로, 엑셀 레퍼런스에서 운용되는 **확장 비용(Allocation/Reserve/Investment)** 항목을 CAS는 내부 계산에 포함할 수 있으며(리포트 옵션), 포함 시 산식은 4.5를 따른다.

---

### 4.3 Per-unit → Amount Conversion (연도별 금액)

연도별 금액 계산은 아래 규칙을 따른다.

#### 4.3.1 Volume (대수)

* Volume[year]는 입력(Fact)이다.

#### 4.3.2 Multi CR (연차별 판매가 인하) — v1.1 추가

> 기획 문서 및 기존 분석 스프레드시트에서 확인. 기존 문서에 미기재되었으나 실무 핵심 로직.

```
판매가[N년차] = 초도가 × (1 - Multi CR%)^(N-1)
기본 CR: 3% (차종별 상이, Vehicle.multi_cr_rate에 정의)
```

* N=1일 때 초도가 유지, N≥2부터 누적 인하 적용
* Multi CR은 차종 생성 시 입력되며, Snapshot 생성 이후에는 변경 불가

#### 4.3.3 Revenue Amount (매출 금액)

* per-unit 판매가가 연도별로 정의되어 있는 경우:

```
매출금액[year] = 판매가_per_unit[year] × Volume[year]
```

* **Multi CR 적용 시:**

```
매출금액[year] = (초도가 × (1 - CR%)^(year-1)) × Volume[year]
```

* 5년 평균 View에서 per-unit 판매가는 다음과 같이 산출된다.

```
판매가_5Yavg = AVERAGE(판매가_per_unit[Year1..Year5])
```

#### 4.3.4 Cost Amount (비용 금액)

per-unit 비용 항목은 다음과 같이 연도별 금액으로 환산된다.

```
비용금액_i[year] = 비용_per_unit_i[year] × Volume[year]
```

---

### 4.4 Standard AGGREGATED Rules (표준 출력 항목)

#### 4.4.1 Total Revenue (총매출)

표준 출력(Analysis/Report)에서의 총매출은 아래로 정의한다.

* per-unit 기준:

```
총매출_per_unit = 판매가
```

* 금액(억원) 기준:

```
총매출_amount = SUM(매출금액[all years])
총매출_억원 = 총매출_amount / 100,000,000
```

SWRL 형식화 (10 §7.1 SWRL-CALC-001):

```
cas:Snapshot(?s) ∧ cas:hasCostValue(?s, ?cv) ∧ cas:forCostItem(?cv, cas:PRICE)
∧ cas:value(?cv, ?v) → cas:totalRevenue(?s, ?v)
```

#### 4.4.2 Total Cost (총비용)

표준 출력에서의 총비용은 “비용항목 집합”의 합으로 정의한다.

* per-unit 기준(Analysis 표준):

```
총비용_per_unit = 재료비 + 조립비 + 물류비 + 포장비 + 관세
```

> **v1.1 구현 반영:** 기존 분석 스프레드시트에서 관세(Customs Duty)가 B-Type 직접비로 포함됨을 확인. 관세는 0인 경우도 있으나 항목은 항상 포함.

* 금액(억원) 기준(보고용):

```
총비용_amount = SUM(총비용금액[all years])
총비용_억원 = 총비용_amount / 100,000,000
```

※ 보고용 총비용은 옵션에 따라 4.5의 확장 비용 항목을 포함할 수 있다.

SWRL 형식화 (10 §7.1 SWRL-CALC-002):

```
cas:Snapshot(?s) ∧ cas:hasCostValue(?s, ?cv_m) ∧ cas:forCostItem(?cv_m, cas:MAT_UNIT) ∧ cas:value(?cv_m, ?m)
∧ cas:hasCostValue(?s, ?cv_a) ∧ cas:forCostItem(?cv_a, cas:ASM_UNIT) ∧ cas:value(?cv_a, ?a)
∧ cas:hasCostValue(?s, ?cv_l) ∧ cas:forCostItem(?cv_l, cas:LOG_UNIT) ∧ cas:value(?cv_l, ?l)
∧ cas:hasCostValue(?s, ?cv_k) ∧ cas:forCostItem(?cv_k, cas:PKG_UNIT) ∧ cas:value(?cv_k, ?k)
∧ swrlb:add(?sum1, ?m, ?a) ∧ swrlb:add(?sum2, ?sum1, ?l) ∧ swrlb:add(?tc, ?sum2, ?k)
→ cas:totalCost(?s, ?tc)
```

---

### 4.5 Extended Cost Components (엑셀 기반 확장 비용 체계)

엑셀 레퍼런스에는 직접비(재료/조립/물류/포장) 외에, 매출 또는 기준 금액에 연동되는 배분·충당·투자 항목이 존재한다.

CAS는 아래 3가지 **Cost Component Type**을 지원한다.

#### 4.5.1 Type A — Rate × Revenue (매출 연동 비율 항목)

예: 노무, 제조경비, 판매관리비, 감가상각비(제조), 강제CR충당금, 판매보증충당금, 기술개발충당금, PL보험료 등

* 입력: rate (예: 0.051)
* 산식:

```
항목금액[year] = rate × 매출금액[year]
```

#### 4.5.2 Type B — Per-unit × Volume (대당 항목)

예: 조립비(대당), 물류비(대당), 포장비(대당), 재료비(대당) 등

* 산식:

```
항목금액[year] = per_unit × Volume[year]
```

#### 4.5.3 Type C — Fixed/Program-level Cost Allocation (프로그램 단위 비용)

예: 금형비, 공정투자비, Cash Back, 개발비 회수(음수), D&D 등

* CAS v1 기본 규칙: **연도별 분배 규칙은 명시적으로 입력**되어야 한다.
* 대표 산식(엑셀 참조):

  * 금형비/공정투자비와 같이 대수에 비례하는 경우:

```
항목금액[year] = per_unit_equivalent × Volume[year]
```

* 매출 평균에 연동되는 경우(예: Cash Back):

```
항목금액 = AVERAGE(매출_per_unit[지정 연도]) × factor
```

---

### 4.6 Total Cost Amount (보고용) 정의

보고용 총비용(금액)은 다음 집합의 합으로 정의한다.

* Direct Cost Amounts: 재료비, 조립비, 물류비, 포장비
* Allocation/Reserve/Investment Amounts: 4.5에 정의된 포함 항목(시스템 설정으로 on/off)

즉,

```
총비용금액[year] = SUM(선택된 비용항목금액_k[year])
총비용_amount = SUM(총비용금액[all years])
```

---

### 4.7 DERIVED Metric Rules

#### 4.7.1 Total Cost Ratio (총비용율)

* per-unit 기준:

```
총비용율_per_unit = 총비용_per_unit / 총매출_per_unit
```

* 금액 기준(보고용):

```
총비용율_amount = 총비용_amount / 총매출_amount
```

SWRL 형식화 (10 §7.1 SWRL-CALC-003):

```
cas:Snapshot(?s) ∧ cas:totalCost(?s, ?tc) ∧ cas:totalRevenue(?s, ?tr)
∧ swrlb:divide(?ratio, ?tc, ?tr) → cas:costRatio(?s, ?ratio)
```

#### 4.7.2 Manufacturing Cost Ratio (제조원가율) — v1.1 추가

> 기존 분석 스프레드시트에서 제조원가율이 별도 지표로 관리됨을 확인.

```
제조원가율 = (재료비 + 조립비 + 노무비 + 제조경비 + 감가상각비 + 파견인건비) / 총매출
```

#### 4.7.3 Cost of Sales Ratio (매출원가율) — v1.1 추가

> 기존 분석 스프레드시트 및 기획 문서에서 절감목표 1안의 기준 지표로 사용됨을 확인.

```
매출원가율 = (제조원가 + 물류비 + 포장비 + 관세 + 상각비) / 총매출
```

※ 절감목표 1안의 목표값: **매출원가율 ≤ 80%**

#### 4.7.4 Reduction Target Reverse Calculation (절감목표 역산) — v1.1 추가

> 기존 분석 스프레드시트에서 항목별 목표가 역산 구조를 확인.

목표 비율 달성을 위해 각 비용 항목의 목표 단가를 역산하는 로직:

```
1안 (매출원가율 80%): 목표매출원가 = 총매출 × 0.80
2안 (총비용율 100%): 목표총비용 = 총매출 × 1.00

항목별_목표가 = 항목별_비중 × 목표비용총액
항목별_절감율 = (현재가 - 목표가) / 현재가 × 100
```

#### 4.7.5 Yield-style Ratios (수율/구성비)

엑셀의 ‘수율’ 행은 판매가 대비 각 비용 항목의 비중을 의미한다.

* Bid 기준:

```
비중_i_bid = 비용_i_bid / 판매가_bid
```

* Current Stage 기준:

```
비중_i_stage = 비용_i_stage / 판매가_stage
```

※ 본 비중은 비교·설명용 지표이며, 총비용율과 함께 표시될 수 있다.

---

## 5. Stage-to-Stage Evaluation Rules

### 5.1 Baseline Rule

* 모든 평가의 기준점(anchor)은 **Bid Snapshot**이다.

---

### 5.2 Delta Calculation

For each CostItem:

```
Delta = Current Stage Value - Bid Value
```

For Cost Ratio:

```
Delta Ratio = Current Ratio - Bid Ratio
```

---

## 6. Validation & Exception Handling

### 6.1 Input Validation Rules

* 모든 INPUT CostItem은 NULL을 허용하지 않는다.
* 음수 값은 허용되지 않는다.
* 총매출(판매가)은 0보다 커야 한다.

---

### 6.2 Calculation Failure Policy

* 하나라도 계산 실패 시 Snapshot 생성은 **중단**된다.
* 실패 원인은 로그로 기록되며, 사용자에게 명시적으로 표시된다.

---

## 7. Calculation Versioning

* 모든 계산 로직은 `calculation_version`으로 관리된다.
* Snapshot에는 적용된 calculation_version이 반드시 기록된다.
* 온톨로지 스키마 버전은 `calculation_version`과 함께 추적된다. SWRL 규칙 변경은 계산 버전 변경에 해당한다.

---

## 8. Explicit Non-Scope

다음 항목은 CAS v1 계산 범위에 포함되지 않는다.

* 예측 기반 비용 산정
* 시나리오 시뮬레이션
* 가중 평균 또는 보정 계산
* AI/ML 기반 판단 로직

---

## 9. Cost Component Catalog (Excel-aligned)

본 섹션은 엑셀 레퍼런스(수주가 분석 파일)에 실제로 사용되는 비용 항목을 **CAS v1의 표준 비용 사전(Catalog)** 으로 정의한다.
본 Catalog에 정의되지 않은 비용 항목은 CAS 계산 엔진에서 사용할 수 없다.

---

### 9.1 Catalog Structure

각 비용 항목은 아래 속성을 가진다.

| Field            | Description                                                |
| ---------------- | ---------------------------------------------------------- |
| component_code   | 시스템 내부 식별자                                                 |
| component_name   | 비용 항목 명칭 (업무 용어)                                           |
| component_type   | A (Rate×Revenue) / B (Per-unit×Volume) / C (Program-level) |
| base_reference   | 매출금액 / 대수 / 지정 기준                                          |
| default_included | 총비용 기본 포함 여부                                               |
| note             | 특이사항                                                       |

---

### 9.2 Standard Cost Component Catalog

#### A-Type (Rate × Revenue)

| component_code | component_name | base_reference | default_included | note  |
| -------------- | -------------- | -------------- | ---------------- | ----- |
| LABOR_RATE     | 노무비            | 매출금액           | ON               | 제조 노무 |
| MFG_OH         | 제조경비           | 매출금액           | ON               | 간접비   |
| SG&A           | 판매관리비          | 매출금액           | ON               | 판관비   |
| DEP_MFG        | 감가상각비(제조)      | 매출금액           | ON               | 제조 감가 |
| WARRANTY       | 판매보증충당금        | 매출금액           | ON               | 보증    |
| CR_RESERVE     | 강제CR충당금        | 매출금액           | OFF              | 고객 요구 |
| RND_RESERVE    | 기술개발충당금        | 매출금액           | OFF              | 내부 정책 |
| PL_INS         | PL보험료          | 매출금액           | OFF              | 보험    |
| DISPATCH_LABOR | 본사파견인건비      | 매출금액           | ON               | v1.1 추가, 기존 분석 데이터 기반 |

---

#### B-Type (Per-unit × Volume)

| component_code | component_name | base_reference | default_included | note |
| -------------- | -------------- | -------------- | ---------------- | ---- |
| MAT_UNIT       | 재료비            | 대수             | ON               | 대당   |
| ASM_UNIT       | 조립비            | 대수             | ON               | 대당   |
| LOG_UNIT       | 물류비            | 대수             | ON               | 대당   |
| PKG_UNIT       | 포장비            | 대수             | ON               | 대당   |
| CUSTOMS        | 관세             | 대수             | ON               | v1.1 추가, 0인 경우 있음 |

---

#### C-Type (Program-level / Allocation)

| component_code | component_name | base_reference | default_included | note  |
| -------------- | -------------- | -------------- | ---------------- | ----- |
| TOOLING        | 금형비            | 지정 분배          | OFF              | 투자비   |
| PROC_INV       | 공정투자비          | 지정 분배          | OFF              | 투자비   |
| CASHBACK       | Cash Back      | 평균매출           | OFF              | 음수 가능 |
| DEV_REC        | 개발비 회수         | 지정             | OFF              | 음수 가능 |
| DND            | D&D            | 지정             | OFF              | 일회성   |

---

### 9.3 Inclusion Rules

* default_included = ON 항목은 **표준 총비용**에 자동 포함된다.
* OFF 항목은 Report 설정에서 선택적으로 포함 가능하다.
* 포함 여부 변경은 **Snapshot 생성 이후에는 적용되지 않는다.**

---

## 10. 변경 시 주의

Cost Component Catalog를 바꾸면 시스템 버전이 올라간다. 다만 이미 생성된 Snapshot에는 소급 적용하지 않는다. SWRL 추론 결과와 계산 엔진 결과가 다르면 배포 차단 사유(BLOCKER)다.
